--- a/app/src/main/res/layout/activity_welcome_screen.xml
+++ b/app/src/main/res/layout/activity_welcome_screen.xml
@@ -13,7 +13,7 @@
         android:orientation="vertical">
 
         <TextView
-            android:text="Welcome to FarmGo!"
+            android:text="Welcome to FarmGo"
             android:textSize="25sp"
             android:layout_gravity="center_horizontal"
             android:textStyle="bold"
