--- a/app/src/main/res/layout/fragment_all_items.xml
+++ b/app/src/main/res/layout/fragment_all_items.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.drawerlayout.widget.DrawerLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".menu.AllItemsFragment">
 
     <androidx.recyclerview.widget.RecyclerView
@@ -11,4 +13,4 @@
         android:layout_height="match_parent"
         android:scrollbars="vertical"/>
 
-</FrameLayout>
+</androidx.drawerlayout.widget.DrawerLayout>
