--- a/app/src/main/res/menu/navigation_menu.xml
+++ b/app/src/main/res/menu/navigation_menu.xml
@@ -2,25 +2,25 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/back"
+        android:id="@+id/menu_back"
         android:icon="@drawable/ic_baseline_arrow_back_24"
         android:title="Back"
         />
 
     <item
-        android:id="@+id/home"
+        android:id="@+id/menu_home"
         android:icon="@drawable/ic_baseline_home_24"
         android:title="Home"
         />
 
     <item
-        android:id="@+id/bookmarks"
+        android:id="@+id/menu_bookmarks"
         android:icon="@drawable/ic_baseline_star_rate_24"
         android:title="Bookmarks"
         />
 
     <item
-        android:id="@+id/aboutUs"
+        android:id="@+id/menu_aboutUs"
         android:icon="@drawable/ic_baseline_info_24"
         android:title="About Us"
         />
