--- a/app/src/main/res/menu/navigation_menu.xml
+++ b/app/src/main/res/menu/navigation_menu.xml
@@ -20,6 +20,12 @@
         />
 
     <item
+        android:id="@+id/menu_terms"
+        android:icon="@drawable/ic_baseline_terms"
+        android:title="Terms and Conditions"
+        />
+
+    <item
         android:id="@+id/menu_aboutUs"
         android:icon="@drawable/ic_baseline_info_24"
         android:title="About Us"
