--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -16,7 +16,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="AAA Chat"
+        android:text="FarmGo"
         android:textSize="24sp"
         android:layout_below="@id/Ivicon"
         android:layout_centerHorizontal="true"
