--- a/app/src/main/res/layout/layout_item_list.xml
+++ b/app/src/main/res/layout/layout_item_list.xml
@@ -17,14 +17,15 @@
 
         <ImageView
             android:id="@+id/item_image"
-            android:layout_width="65dp"
-            android:layout_height="65dp"
-            android:src="@drawable/nesamani"/>
+            android:layout_width="150dp"
+            android:layout_height="100dp"
+            android:src="@drawable/nesamani"
+            android:scaleType="centerCrop"/>
     </androidx.cardview.widget.CardView>
 
 
     <LinearLayout
-        android:layout_width="65dp"
+        android:layout_width="150dp"
         android:layout_height="wrap_content"
         android:layout_below="@+id/image_profile">
 
@@ -35,7 +36,8 @@
             android:text="Item engada?"
             android:gravity="center_horizontal"
             android:textSize="14sp"
-            android:textColor="@color/black"/>
+            android:textColor="@color/black"
+            android:textAlignment="center"/>
     </LinearLayout>
 
 </RelativeLayout>
