--- a/app/src/main/res/menu/category.xml
+++ b/app/src/main/res/menu/category.xml
@@ -9,7 +9,5 @@
     <item android:id="@+id/item4"
         android:title="Oils"/>
     <item android:id="@+id/item5"
-        android:title="milk"/>
-    <item android:id="@+id/item6"
-        android:title="Egg"/>
+        android:title="Dairy"/>
 </menu>
