--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -9,15 +9,53 @@
         app:showAsAction="always"
         />
 
+    <item
+        android:id="@+id/menu_options"
+        android:title="Options"
+        android:icon="@drawable/ic_baseline_more_vert_24_white"
+        app:showAsAction="always">
+
+        <menu>
+
+            <item
+                android:id="@+id/menu_home"
+                android:icon="@drawable/ic_baseline_home_24"
+                android:title="Home"
+                />
+
+            <item
+                android:id="@+id/menu_bookmarks"
+                android:icon="@drawable/ic_baseline_star_rate_24"
+                android:title="Bookmarks"
+                />
+
+            <item
+                android:id="@+id/menu_terms"
+                android:icon="@drawable/ic_baseline_terms"
+                android:title="Terms and Conditions"
+                />
+
+            <item
+                android:id="@+id/menu_privacy"
+                android:icon="@drawable/ic_baseline_privacy"
+                android:title="Privacy Policy"
+                />
+
+            <item
+                android:id="@+id/menu_aboutUs"
+                android:icon="@drawable/ic_baseline_info_24"
+                android:title="About Us"
+                />
+
+        </menu>
+
+    </item>
+
+
 </menu>
 
 
 
 <!--
-<item
-        android:id="@+id/menu_options"
-        android:title="Options"
-        android:icon="@drawable/ic_baseline_view_headline_24"
-        app:showAsAction="always"
-        />
+
 -->
